[metadata]
name = cronparse
version = 0.1.0
description = Human-readable cron expression parser and validator with next-run previews
long_description = file: README.md
long_description_content_type = text/markdown
author = cronparse contributors
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9

[options.entry_points]
console_scripts =
    cronparse = cronparse.cli:main

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov>=4.0

[tool:pytest]
testpaths = tests
addopts = --tb=short

[coverage:run]
source = cronparse
omit =
    tests/*
    setup.py

[coverage:report]
show_missing = true
fail_under = 80
