[metadata]
name = cronparse
version = 0.1.0
description = Human-readable cron expression parser and validator with next-run previews
author = cronparse developers
license = MIT

[options]
packages =
    cronparse
install_requires =
    python-dateutil>=2.8

[options.entry_points]
console_scripts =
    cronparse = cronparse.cli:main
    cronparse-lint = cronparse.cli_lint:main
    cronparse-audit = cronparse.cli_audit:main
    cronparse-compare = cronparse.cli_compare:main

[tool:pytest]
testpaths = tests
addopts = -q

[flake8]
max-line-length = 99
exclude =
    .git,
    __pycache__,
    *.egg-info

[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True

[coverage:run]
source = cronparse
branch = True

[coverage:report]
show_missing = True
omit =
    tests/*
    setup.py
